# ros2_alliedvision_node

./: CMakeLists.txt  package.xml
launch/: camera_resize_raw.launch.py
src/: alliedvision_control.cpp  alliedvision_controller.cpp
